Fix UI overflow bugs in books display

--- a/styles.css
+++ b/styles.css
@@ -146,13 +146,14 @@ input[type='radio'] {
 
 .newBook {
     display: grid;
-    grid-template-rows: repeat(5, 20%);
+    grid-template-rows: 40% 20% 20% 10% 10%;
     background-color: #8EA482;
     width: 300px;
     border-radius: 15px;
     align-items: center;
     justify-items: center;
     font-size: 25px;
+    text-align: center;
 }
 
 .newBook>div:not(.bookNameShowed, .operation) {
@@ -160,7 +161,7 @@ input[type='radio'] {
 }
 
 .bookNameShowed {
-    font-size: 2.8rem;
+    font-size: 1.5em;
     font-weight: bolder;
 }
 
@@ -202,6 +203,12 @@ input[type='radio'] {
 
 input:invalid {
     border-color: black;
+}
+
+.bookNameShowed,.author{
+    inline-size: 290px;
+    word-wrap: break-word;
+    height: fit-content(200px);
 }
 
 @media screen and (max-width: 1600px) {
